public/css/app.css
h1, h2, h3, h4, h5, h6, p, a {
    font-family: Lato;
}

a {
    font-size: 17px;
    text-decoration: none !important;
}

body {
    padding-top: 50px;
}

nav {
    background-color: white !important;
}

/* Button */
.btn-component {
    font-weight: bold;
    letter-spacing: 1px;
    padding: 8px 32px;
    min-width: 150px;
    text-align: center;
    color: black !important;
}

/* Overrides button text turning blue */
.btn-component:hover {
    color: black;
}

.button {
    color: black !important;
    background-color: transparent;
    border: 2px solid black;
}
/* End button */

/* top hero section */
.hero-section {
    position: relative;
    text-align: center;
}

.hero-image {
    width: 100%;
}

.hero-text {
    color: white;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

.flavor-text {
    margin-right: 100px;
    margin-left: 100px;
}

@media (max-width: 757px) {
    .flavor-text {
        margin-right: 50px;
        margin-left: 50px;
    }
}

@media (max-width: 628px) {
    .flavor-text {
        margin-right: 30px;
        margin-left: 30px;
        font-size: 17px;
    }
}

@media (max-width: 400px) {
    .flavor-text {
        margin-right: 17px;
        margin-left: 17px;
        padding-bottom: 10px;
        font-size: 15px;
    }
}
/* End hero section */

.heading {
    /* Text for the heading */
    text-align: center;
}

.name {
    display: inline-block;
    border-bottom: 1.5px solid black;
    padding: 5px;
}

.section-text {
    display: inline-block;
    border-top: 1.5px solid black;
    padding: 5px;
}

